lists, text input, table

--- a/public/index.html
+++ b/public/index.html
@@ -6,8 +6,12 @@
     <title>React App</title>
   </head>
   <body>
-
+    <header id="firstheader"></header>
     <div id="root"></div>
+    <div id="table"></div>
+    <p id = "mathelement"></p>
+    <div id = "grocerylist"></div>
+    <div id = "firsttextinput"></div>
 
   </body>
 </html>
