constructors, props, state, lifecycles, etc..

--- a/public/index.html
+++ b/public/index.html
@@ -12,6 +12,9 @@
     <p id = "mathelement"></p>
     <div id = "grocerylist"></div>
     <div id = "firsttextinput"></div>
+    <div id = 'vehicleelement1'></div>
+    <div id = 'vehicleelement2'></div>
+    <div id = 'garageelement'></div>
 
   </body>
 </html>
